kubernetes/apps/keyb/prod/sonic/deploymentPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyb-sonic
spec:
  selector:
    matchLabels:
      app: keyb-sonic-prod
  template:
    metadata:
      labels:
        app: keyb-sonic-prod
    spec:
      containers:
      - name: keyb-sonic
        image: valeriansaliou/sonic:v1.3.0
        ports:
        - name: http
          containerPort: 1491
        volumeMounts:
        - mountPath: "/etc"
          subPath: keyb/sonic-prod
          name: unraid-storage
      volumes:
      - name: unraid-storage
        persistentVolumeClaim:
          claimName: unraid-un-nvme-pvc
