kubernetes/apps/keyb/prod/sonic/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keyb-sonic-service
spec:
  selector:
    app: keyb-sonic-prod
  type: ClusterIP
  ports:
    - name: http
      port: 1491
      targetPort: 1491
